--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -565,7 +565,7 @@ body {
 
 .custom-textarea {
 	max-height: 300px;
-	min-height: 100px !important;
+	min-height: 130px !important;
 }
 
 .text-red {
@@ -909,11 +909,69 @@ body {
 	background-color: rgba(144, 255, 144, 0.5);
 }
 
+.upload {
+	width: 100px;
+	position: relative;
+}
+
+.upload img {
+	object-fit: cover;
+	overflow: hidden;
+	border-radius: 50%;
+	border: 2px solid #5256ad;
+	margin-left: 16px;
+}
+
+.upload .round, .poster-image .round {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	background: #198754;
+	width: 32px;
+	height: 32px;
+	line-height: 33px;
+	text-align: center;
+	border-radius: 50%;
+	overflow: hidden;
+}
+
+.upload .round input[type="file"], .poster-image .round input[type="file"] {
+	position: absolute;
+	transform: scale(2);
+	opacity: 0;
+}
+
 .avatar-table {
+	display: inline-block;
 	width: 35px;
 	height: 35px;
 	object-fit: cover;
 	border-radius: 35px;
 	overflow: hidden;
 	margin: 3px 1px;
+}
+
+.poster-image {
+	display: block;
+	width: 200px;
+	height: 300px;
+	border-radius: 10px;
+	object-fit: cover;
+	overflow: hidden;
+	position: relative;
+	margin-left: auto;
+	margin-right: auto;
+	border: 1px solid #19875492;
+}
+
+.poster-image img {
+	width: 200px;
+	height: 300px;
+	object-fit: cover;
+}
+
+.select-label {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 }
